@@ -36,10 +36,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <version.cxf>3.1.0</version.cxf>
     <version.slf4j>1.7.1</version.slf4j>
-    <version.olingo>2.0.8</version.olingo>
+    <version.olingo>2.0.10</version.olingo>
     <version.springframework>3.2.14.RELEASE</version.springframework><!-- 3.2.14.RELEASE-->
     <version.commonsdbcp>1.4</version.commonsdbcp>
-    <version.denodovdpjdbcdriver>6.0.0</version.denodovdpjdbcdriver>
+    <version.denodovdpjdbcdriver>6.0.10</version.denodovdpjdbcdriver>
+    <classifier.denodovdpjdbcdriver>full</classifier.denodovdpjdbcdriver>
   </properties>
 
   <build>
@@ -89,7 +90,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -273,9 +273,10 @@
     </dependency>
 
     <dependency>
-      <groupId>com.denodo.vdp</groupId>
-      <artifactId>denodo-vdp-jdbcdriver</artifactId>
+      <groupId>com.denodo.vdp.jdbc</groupId>
+      <artifactId>denodo-vdp-jdbcdriver-dist</artifactId>
       <version>${version.denodovdpjdbcdriver}</version>
+      <classifier>${classifier.denodovdpjdbcdriver}</classifier>
       <scope>provided</scope>
     </dependency>
 
